components/Navbar/Navbar.module.scss
@use '../../styles/globals.scss' as *;

.header {
  // Header style
  position: fixed;
  left: -300px;
  height: 100%;
  width: 300px;
  background-color: $tint;
  margin: 0;
  padding: 1rem 3rem;
  z-index: 1;
  box-shadow: 0 0 12px -6px $light-shadow;
  transition: all 0.3s ease-in-out;
  opacity: 0;
  overflow: hidden;

  &.expanded {
    opacity: 1;
    transform: translateX(300px);
  }

  & > * {
    color: $black;
  }

  // Children layout
  display: flex;
  flex-direction: column;
  justify-content: flex-end;

  @include dark {
    background-color: $shade-black;
    box-shadow: unset;
  }

  @include smartphone() {
    left: 0;
    top: -110%;
    width: 100%;
    height: 100%;

    &.expanded {
      transform: translateX(0);
      transform: translateY(+110%);
    }
  }

  @media print {
    display: none;
  }
}

.nav {
  flex: 5;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: baseline;
  font-size: 1.2rem;

  & > ul > li {
    margin: 1rem 0;
    transition: 0.3s ease-in-out;
    cursor: pointer;

    &:hover {
      color: $shadow;
    }
  }

  @include dark {
    color: $tone;

    & > ul > li:hover {
      color: $white;
    }
  }
}

.active {
  transition: 0.3s ease-in-out;
  text-decoration: underline;
}
.inactive {
  transition: 0.3s ease-in-out;
  text-decoration: none;
}

.socials {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;

  & > ul {
    display: flex;
    justify-content: space-evenly;
    align-content: flex-end;

    & > li {
      border-radius: 6px;
      transition: 0.3s ease-in-out;
      cursor: pointer;

      &:hover {
        color: $shadow;
        background-color: $white;
      }
    }
  }

  @include smartphone {
    color: $shadow;
  }

  @include dark {
    color: $tone;

    & > ul > li:hover {
      background-color: $black;
      color: $white;
    }
  }
}

.options {
  position: fixed;
  color: $shadow;
  display: flex;
  gap: 1rem;
  top: 0;
  left: 0;
  padding: 1rem;
  transition: 0.2s ease;
  z-index: 2;
  width: 100%;
  background-color: $white;

  &.expanded {
    background-color: rgba(0, 0, 0, 0);
    width: unset;
  }

  & > *:hover {
    color: $black;
  }

  @include smartphone {
    width: 100%;
    padding: 1rem;
    justify-content: space-between;
    gap: 0;
  }

  @include dark {
    color: $tint;
    background-color: $black;

    &.expanded {
      background-color: rgba(0, 0, 0, 0);
      color: $tone;
    }

    & > *:hover {
      color: $white;
    }
  }

  @media print {
    display: none;
  }
}

.icon {
  display: inline-block;
  margin: 0.5rem;
}

.credits {
  margin-top: 0.5rem;
}

.rss {
  float: right;
  text-decoration: underline;
  cursor: pointer;
}

